Fixed icon editor not showing up when editing a device
Added icon selector model

--- a/GeoTag/src/app/settings-modal/settings-modal.page.scss
+++ b/GeoTag/src/app/settings-modal/settings-modal.page.scss
@@ -23,3 +23,7 @@ ion-content {
   ion-grid{
     padding:0rem;
 }
+
+ion-icon {
+    font-size: 3em;
+}
